# or1ksim

./: .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.gdb  README.md  aclocal.m4  autogen.sh  brend-static.sh  brend.sh  brstart-static.sh  brstart.sh  config.guess  config.h.in  config.sub  configure  configure.ac  cpu-config.c  cpu-config.h  debug.cfg  doxygen.config  libtoplevel.c  mainpage  mprofiler.c  mprofiler.h  or1ksim.h  profiler.c  profiler.h  rsp.cfg  sim-cmd.c  sim-cmd.h  sim-config.c  sim-config.h  sim-nd.cfg  sim.cfg  toplevel-mprofile.c  (+5 more)
argtable2/: Makefile.am  Makefile.in  README  arg_date.c  arg_dbl.c  arg_end.c  arg_file.c  arg_int.c  arg_lit.c  arg_rem.c  arg_rex.c  arg_str.c  argtable2.c  argtable2.h  config.h.in
cpu/or32/: .cvsignore  Makefile.am  Makefile.in  common-i386.h  def-op-t.h  dyn-rec.c  dyn-rec.h  dyn32-defs.h  dyngen-elf.c  dyngen-i386.c  dyngen.c  dyngen.h  execute-fp.h  execute.c  generate.c  i386-regs.h  insnset.c  op-1t-op.h  op-1t.h  op-2t-op.h  op-2t.h  op-3t-op.h  op-3t.h  op-arith-op.h  op-comp-op.h  op-extend-op.h  op-ff1-op.h  op-i386.h  op-lwhb-op.h  op-mac-op.h  op-mftspr-op.h  op-support.c  op-support.h  op-swhb-op.h  op-t-reg-mov-op.h  op.c  or32.c  rec-i386.h  sched-i386.h  simpl32-defs.h
cuc/: Makefile.am  Makefile.in  adv.c  bb.c  cuc.c  cuc.h  insn.c  insn.h  load.c  memory.c  timings.c  verilog.c  verilog.h
pcu/: Makefile.am  Makefile.in  pcu.c  pcu.h
peripheral/: 16450.c  16450.h  Makefile.am  Makefile.in  atacmd.h  atadevice-cmdi.c  atadevice-cmdi.h  atadevice.c  atadevice.h  atahost.c  atahost.h  cfi_flash.c  cfi_flash.h  crc32.c  crc32.h  dma-defs.h  dma.c  dma.h  eth.c  eth.h  fb.c  fb.h  generic.c  generic.h  gpio.c  gpio.h  mc-defines.h  mc.c  mc.h  mc_defines.h  memory.c  memory.h  ps2kbd.c  ps2kbd.h  vga.c  vga.h
peripheral/channels/: Makefile.am  Makefile.in  channel.c  channel.h  fd.c  fd.h  file.c  file.h  generic.c  generic.h  tcp.c  tcp.h  tty.c  tty.h  xterm.c  xterm.h
testbench/: .cvsignore  Makefile.am  Makefile.in  README  TODO  aclocal.m4  acv_gpio.c  acv_gpio.cfg  acv_uart.c  acv_uart.cfg  basic.S  board.h  cache.c  cache.ld  cache_asm.S  cbasic.c  cfg.S  configure  configure.in  default.cfg  default.ld  dhry.c  dmatest.c  eth.c  except.S  except_mc.S  except_mc.ld  except_test.c  except_test_s.S  exit.c  ext.S  fbtest.c  flag.S  functest.c  inst_set_test.c  int_test.S  int_test.ld  kbdtest.c  local_global.c  mc_async.c  (+17 more)
testbench/support/: Makefile.am  Makefile.in  int.c  support.c  support.h
testbench/uos/: .cvsignore  Makefile.am  Makefile.in  README  except_or32.S  ipc.h  spr_defs.h  task.c  tick.c  uos.c  uos.h
testsuite/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  default-global-conf.exp  global-conf.exp
testsuite/config/: Makefile.am  Makefile.in  unix.exp
testsuite/lib/: Makefile.am  Makefile.in  libsim.exp  or1ksim.exp
testsuite/libsim.tests/: Makefile.am  Makefile.in  default.cfg  int-edge.cfg  int-edge.exp  int-level.cfg  int-level.exp  jtag-basic.exp  jtag-full.exp  jtag-go-command-read.exp  jtag-go-command-write.exp  jtag-read-command.exp  jtag-read-control.exp  jtag-select-module.exp  jtag-write-command.exp  jtag-write-control.exp  lib-iftest.exp  upcalls.cfg  upcalls.exp
testsuite/or1ksim.tests/: Makefile.am  Makefile.in  acv-uart.cfg  atomic.exp  basic.exp  cache.exp  cbasic.exp  cfg.exp  default.cfg  dhry.exp  dmatest.exp  eth.cfg  eth.exp  eth0.rx  except-test.exp  exit.exp  ext.exp  fbtest.exp  flag.exp  fp.cfg  fp.exp  fpee.exp  functest.exp  inst-set-test.exp  int-test.exp  kbdtest.cfg  kbdtest.exp  kbdtest.rx  local-global.exp  lws-test.exp  mem-test.exp  mmu.cfg  mmu.exp  mul.exp  mycompress.exp  pcu.exp  testfloat.cfg  testfloat.exp  tick.exp
testsuite/test-code/: Makefile.am  Makefile.in
testsuite/test-code-or1k/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  default.ld  except-mc.ld
testsuite/test-code-or1k/acv-gpio/: Makefile.am  Makefile.in  acv-gpio.c
testsuite/test-code-or1k/acv-uart/: Makefile.in  acv-uart.c
testsuite/test-code-or1k/atomic/: Makefile.am  Makefile.in  atomic.S
testsuite/test-code-or1k/basic/: Makefile.am  Makefile.in  basic.S
testsuite/test-code-or1k/cache/: Makefile.in  cache-asm.S  cache.c  cache.ld
testsuite/test-code-or1k/cbasic/: Makefile.in  cbasic.c
testsuite/test-code-or1k/cfg/: Makefile.in  cfg.S
testsuite/test-code-or1k/dhry/: Makefile.am  Makefile.in  dhry.c  dhry.h
testsuite/test-code-or1k/dmatest/: Makefile.am  Makefile.in
testsuite/test-code-or1k/eth/: Makefile.am  Makefile.in  eth.c  eth.h  fields.h
testsuite/test-code-or1k/except/: Makefile.am  Makefile.in  except.S
testsuite/test-code-or1k/except-test/: Makefile.in  except-test-s.S  except-test.c
testsuite/test-code-or1k/exit/: Makefile.am  Makefile.in
testsuite/test-code-or1k/ext/: Makefile.in  ext.S
testsuite/test-code-or1k/fbtest/: Makefile.in  fbtest.c
testsuite/test-code-or1k/flag/: Makefile.in  flag.S
testsuite/test-code-or1k/fp/: Makefile.am  Makefile.in  fp.S
testsuite/test-code-or1k/fpee/: Makefile.am  Makefile.in  fpee.c
testsuite/test-code-or1k/functest/: Makefile.am  Makefile.in  functest.c
testsuite/test-code-or1k/inst-set-test/: Makefile.am  Makefile.in  inst-set-test.S  inst-set-test.c  inst-set-test.h  inst-set-test.ld  is-add-test.S  is-and-test.S  is-div-test.S  is-find-test.S  is-jump-test.S  is-lws-test.S  is-mac-test.S  is-mul-test.S  is-or-test.S  is-ror-test.S  is-shift-test.S  is-spr-test.S  is-sub-test.S  is-xor-test.S
testsuite/test-code-or1k/int-logger/: Makefile.am  Makefile.in  int-logger-edge.c  int-logger-level.c  int-logger.c
testsuite/test-code-or1k/int-test/: Makefile.am  Makefile.in  int-test.S  int-test.ld
testsuite/test-code-or1k/kbdtest/: Makefile.am  Makefile.in  kbdtest.c
testsuite/test-code-or1k/local-global/: Makefile.am  Makefile.in
testsuite/test-code-or1k/loop/: Makefile.am  loop.c  (+3 more)
testsuite/testsuite/: AUTHORS  ChangeLog  INSTALL  README
(+330 files in other folders)
